2006-02-03 Perry
 PATCH: [ 1423060 ] Modify perl selftest to test all 4 builds
 Changes to selftest
 Current selftests status: Failure count: 36 (of 480)
  Failing -b t002 (all 3 platforms, all 4 builds)
  Failing -bi t002 (all 3 platforms, all 4 builds)
  Failing -b bug1406950 (all 3 platforms, all 4 builds)
 PATCH: [ 1421694 ] Widen comments label in Rational ClearCase dialog
  Src: Merge.rc
  Src/Languages: */Merge*.rc
 PATCH: [ 1423461 ] Rearrange language select dialog
  Src: MainFrm.cpp MainFrm.h Merge.rc OpenDlg.cpp OpenDlg.h
  Src/Common: LanguageSelect.cpp LanguageSelect.h
  Src/Languages: */Merge*.rc

2006-02-02 Perry
 PATCH: [ 1422052 ] Correction of Swedish for 2.5.3.1+
 Contributed by Hans Eriksson
 Src/Languages/Swedish: Merge Swedish
 
2006-02-01 Perry
 PATCH: [ 1412386 ] Adding readme files
  New WinMerge/readme.txt
  (Various other directories affected -- readme.txt & Changes.txt files)

2006-02-01 Kimmo
 PATCH: [ 1419329 ] Select Line Difference
  Src: Merge.rc MergeDiffDetailView.cpp MergeDiffDetailView.h MergeEditView.cpp
   MergeEditView.h resource.h
  Src/Language: */Merge*.rc

2006-02-01 Perry
 BUG: [ 1419317 ] link error on 8-bit cvs trunk
  Add HtmlHelp.lib to link lines MergeRelease, MergeDebug, MergeUnicodeRelease.
  Src: Merge.dsp
 PATCH: [ 1419582 ] Polish translation update for latest v2.5
  Contributed by dr_prozac
  Src/Languages/Polish: MergePolish.rc
 PATCH: [ 1421018 ] Fix handle leak in GetOpenFileName
 BUG: [ 1418765 ] 2.4.4.0U maintain opened a handle on folders
  Adds new method paths_GetWindowsDirectory & resets current
   directory to WINDIR after GetOpenFileName call
  Src: MainFrm.cpp OpenDlg.cpp paths.cpp paths.h
 Cosmetic: synchronizing whitespace to English version
  Src/Languages/*: MergeTurkish.rc MergeSwedish.rc MergeSpanish.rc
 Cosmetic: synchronizing whitespace to English version
  Src/Languages/*: MergePolish.rc
 Updating Polish dialog control layout to English (except where
  would hinder appearance)